Change the print length in Debug, in order to print a bigger portion of text.

--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -570,7 +570,8 @@
 					var name = feMacroRunArgNames[i].getAttribute("value");
 					//first decode URI, then convert html entities
 					var value = Debug.errorPopConditionString(decodeURIComponent(
-						feMacroRunArgValues[i].getAttribute("value")), Debug._ERR_TRUNCATION_LENGTH*5 /* allow bigger strings before truncation */);
+						feMacroRunArgValues[i].getAttribute("value")), 
+						-1 /* allow max strings before truncation */);
 
 					if(name == "Filename" || name == "filename")
 					{
@@ -658,7 +659,8 @@
 						var name = outputArgNames[i].getAttribute("value");
 		    			//first decode URI, then convert html entities
 						var value = Debug.errorPopConditionString(decodeURIComponent(
-								outputArgValues[i].getAttribute("value")), Debug._ERR_TRUNCATION_LENGTH*5 /* allow bigger strings before truncation */);
+								outputArgValues[i].getAttribute("value")), 
+								-1 /* allow max strings before truncation */);
 
 						if(name == "Filename" || name == "filename")
 							str += name + " = " +
