--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -3259,6 +3259,12 @@
 					"\nNote: hot keys will target the highlighted node.'" +
 					">- All Children</a>";
 
+				// TODO: add the search bar
+				treeViewHandlerStr_ += "&nbsp;&nbsp;&nbsp;&nbsp;";
+				treeViewHandlerStr_ += "<input id='tree-view-searchbar'" +
+										"placeholder='Search...' " +
+										"onkeyup='applySearchNode(); return false;'></input>";
+
 
 				//				treeViewHandlerStr_ += "&nbsp;&nbsp;&nbsp;&nbsp;";
 				//				treeViewHandlerStr_ += "<a href='#' onclick='" +
@@ -4643,6 +4649,30 @@
 		} //end handleTreeNodeClick()
 
 		//==============================================================================
+		//TODO: search bar
+		//applySearchNode ~
+		function applySearchNode()
+		{
+			console.log("call")
+			var fields = document.getElementsByClassName("treeNode-Value");
+			var text = document.getElementById("tree-view-searchbar").value;
+
+			for (var i = 0; i < fields.length; i++)
+			{
+				if (text !== "" && fields[i].innerText.toLowerCase().includes(text))
+				{
+					// nodes[i].style.display = "block";
+					fields[i].style.color = "green";
+				}
+				else
+				{
+					fields[i].style.color = "inherit";
+					// nodes[i].style.display = "none";
+				}
+			}
+		}
+
+		//==============================================================================
 		//applyTreeFilter ~
 		function applyTreeFilter(filter, reapplyFilter, infoWasToggled) 
 		{
@@ -4676,11 +4706,13 @@
 				lastTreeFilter_ = treeFilter_;
 			}
 
+			// refresh the filter
 			if (reapplyFilter)
 				filter = treeFilter_;
 			else
 				treeFilter_ = filter;
 
+			// case no filter
 			if (!filter || filter == "" || filter == "*") return;
 
 			//apply new filter
@@ -8872,7 +8904,7 @@
 					{
 						//handle expand
 						Debug.log("treeView bodyKey expand " + e.key);
-						expandTreeChildrenDepth();
+						// expandTreeChildrenDepth();
 						break;
 					}
 
@@ -8881,7 +8913,7 @@
 					{
 						//handle hide
 						Debug.log("treeView bodyKey hide " + e.key);
-						hideTreeChildrenDepth();
+						// hideTreeChildrenDepth();
 						break;
 					}
 			}
