add style to the searhbar, fix bug with event onkeydown

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -444,6 +444,34 @@
 			-ms-user-select: 		none;
 			user-select: 			none;
 		}
+
+		#searchbar {
+			float: right;
+			width: 200px;
+			display: flex;
+			text-align: center;
+			border-radius: 3px;
+			background-color: white;
+			padding: 4px
+		}
+
+		#searchbar input:focus {
+			outline: 0;
+		}
+
+		#searchbar input {
+			border: 0;
+		}
+
+		#searchbar span {
+			display: inline-block;
+			width: 24px;
+			height: 24px;
+			background-image: url(/WebPath/images/windowContentImages/SlowControlsDashboardFileTree-magnifyingGlass.png);
+			background-size: 24px 24px;
+			margin-right: 2px;
+		}
+
 	</style>
 
 
@@ -3261,9 +3289,12 @@
 
 				// TODO: add the search bar
 				treeViewHandlerStr_ += "&nbsp;&nbsp;&nbsp;&nbsp;";
-				treeViewHandlerStr_ += "<input id='tree-view-searchbar'" +
-										"placeholder='Search...' " + 
-										"onkeydown='applySearchNode(event)'></input>";
+				treeViewHandlerStr_ += "<div id='searchbar'>" + 
+											"<span></span>" + 
+											"<input id='tree-view-searchbar'" +
+											"placeholder='Search...' " + 
+											"onkeydown='applySearchNode(event)'></input>" + 
+										"</div>";
 
 
 				//				treeViewHandlerStr_ += "&nbsp;&nbsp;&nbsp;&nbsp;";
@@ -4654,11 +4685,18 @@
 		function applySearchNode(event)
 		{
 			var fields = document.getElementsByClassName("treeNode-Value");
-			var text = document.getElementById("tree-view-searchbar").value;
+			var text = document.getElementById("tree-view-searchbar").value; 
+
+			// problem with keydown
+			if (event.keyCode >= 48 && event.keyCode <= 90)
+				text = text + event.key;
+
+			if (event.keyCode === 8)
+				text = text.slice(0, -1);
 
 			for (var i = 0; i < fields.length; i++)
 			{
-				if (text !== "" && fields[i].innerText.toLowerCase().includes(text))
+				if (text !== "" && fields[i].innerText.toLowerCase().includes(text.toLowerCase()))
 				{
 					fields[i].style.color = "green";
 				}
