add feUID to the command history of the FE Macro

--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -1817,7 +1817,7 @@
 						"class": className,
 						"onClick": "onClickHistoryRecord(" + record + ")"
 					},
-					command["macroName"] + ": " + (recordName === "" ? "No arguments": recordName),
+					"(" + command["feUID"] + ") " + command["macroName"] + ": " + (recordName === "" ? "No arguments": recordName),
 					true);
 		}
 
