--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -104,6 +104,7 @@
 			height: 80vh;
 			max-height: fit-content;
 			overflow-y: auto;
+			resize: horizontal;
 		}
 
 		.record {
@@ -111,6 +112,7 @@
 			padding: 2px;
 			font-weight: bold;
 			cursor: pointer;
+			white-space: initial;
 
 		}
 
@@ -1834,7 +1836,7 @@
 			}
 			recordText += command["macroName"] + ": ";
 
-			// put the new history in head
+ 			// put the new history in head
 			historyContent.innerHTML = DesktopContent.htmlOpen(
 					"div",
 					{
