optimizing configuration interactions by multi-threading more

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -2262,7 +2262,7 @@
 				{
 					"onclick": "popUpGroupUploadDownloadUpdateForm(\"" + groupName +
 						"\",\"" + groupKey + "\", false /*isUpload*/, true /*isUpdate*/);",
-					"title": "Update a selection of member tables from the current group &apos;" + groupName + "(" + groupKey + ").&apos;",
+					"title": "Update a selection of member tables (e.g. to fix column mismatches) from the current group &apos;" + groupName + "(" + groupKey + ").&apos;",
 				},
 				"Update a selection of member tables" /*innerHTML*/,
 				true /*doCloseTag*/);
